welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:6: error: '(' expected but '{' found.
  else if {
          ^SlugTracking:15: error: illegal start of simple expression
} 
^